CHANGES
*******

0.7 (unreleased)
================

- Nothing changed yet.


0.6 (2014-11-13)
================

- Added Python 3 compatibility. Fixes issue #25.

- Bower components and local components can be created based on a path
  relative to the directory in which the components are created using
  ``bowerstatic.module_relative_path``.

- The injector and the publisher can now also be used directly by
  providing a WebOb request and response. Third-party frameworks that
  already use WebOb (such as Morepath and Pyramid) can make use of
  this to integrate with on the level of their own request and
  response objects, instead of on the WSGI level.

0.5 (2014-09-24)
================

- On some platforms and filesystems (such as Linux ext3, Mac OS X)
  ``os.path.getmtime()`` returns timestamps with the granularity of
  seconds instead of subseconds such as Linux ext4. We go for second
  granularity now by default for autoversioning as this should be good
  enough during development.

  The test for autoversioning was assuming sub-second granularity and
  this test failed. This test is now skipped on Mac OS X. What didn't
  help was weird code in BowerStatic that cut off the last bit of the
  microsecond isoformat -- this was removed.

  This fixes bug #20. (Thanks to Michael Howitz for the bug report)

- Display a nicer error messages when a component depends on another one
  that doesn't exist. Thanks for Michael Howitz for the improvement.

- Internal toposort module was not imported relative to package,
  which could lead to errors in some circumstances. Thanks TylorS for
  reporting! Fixes issue #24.

0.4 (2014-09-08)
================

- There was a bug in the new ``component(name)`` method to obtain the
  component, because it wouldn't work for local components. Fixing this
  properly took a significant refactoring:

  * the ComponentCollection gains its own fallback behavior, much
    simpler to implement than in LocalComponentCollection.
