@@ -5,12 +5,13 @@ CONTENT_TYPES = set(['text/html', 'application/xhtml+xml'])
 METHODS = set(['GET', 'POST', 'HEAD'])
 
 
-class Injector(object):
-    def __init__(self, bower, wsgi):
+class InjectorTween(object):
+    def __init__(self, bower, handler):
         self.bower = bower
-        self.wsgi = wsgi
+        self.handler = handler
 
-    def inject(self, request, response):
+    def __call__(self, request):
+        response = self.handler(request)
         if request.method not in METHODS:
             return response
         if response.content_type.lower() not in CONTENT_TYPES:
@@ -25,6 +26,13 @@ class Injector(object):
         response.write(body)
         return response
 
+
+class Injector(object):
+    def __init__(self, bower, wsgi):
+        def handler(request):
+            return request.get_response(wsgi)
+        self.tween = InjectorTween(bower, handler)
+
     @webob.dec.wsgify
     def __call__(self, request):
-        return self.inject(request, request.get_response(self.wsgi))
+        return self.tween(request)
